// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepartmentInfo Component renders department info 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui header"
      >
         
        Computer Science
         
      </div>
      <div
        class="ui two column grid"
      >
        <div
          class="column"
        >
          <div
            class="row"
          >
            <div
              class="ui header"
            >
              Courses
            </div>
          </div>
          <div
            class="row"
          >
            <a
              href="/course/1"
            >
              <span>
                
                 
                User Interface Design
              </span>
            </a>
          </div>
          <div
            class="row"
          >
            <a
              href="/course/2"
            >
              <span>
                
                 
                Machine Learning
              </span>
            </a>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <div
              class="ui header"
            >
              Professors
            </div>
          </div>
          <div
            class="row"
          >
            <a
              href="/professor/1"
            >
              <span>
                Lydia
                 
                Chilton
              </span>
            </a>
          </div>
          <div
            class="row"
          >
            <a
              href="/professor/2"
            >
              <span>
                Nakul
                 
                Verma
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui header"
    >
       
      Computer Science
       
    </div>
    <div
      class="ui two column grid"
    >
      <div
        class="column"
      >
        <div
          class="row"
        >
          <div
            class="ui header"
          >
            Courses
          </div>
        </div>
        <div
          class="row"
        >
          <a
            href="/course/1"
          >
            <span>
              
               
              User Interface Design
            </span>
          </a>
        </div>
        <div
          class="row"
        >
          <a
            href="/course/2"
          >
            <span>
              
               
              Machine Learning
            </span>
          </a>
        </div>
      </div>
      <div
        class="column"
      >
        <div
          class="row"
        >
          <div
            class="ui header"
          >
            Professors
          </div>
        </div>
        <div
          class="row"
        >
          <a
            href="/professor/1"
          >
            <span>
              Lydia
               
              Chilton
            </span>
          </a>
        </div>
        <div
          class="row"
        >
          <a
            href="/professor/2"
          >
            <span>
              Nakul
               
              Verma
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DepartmentInfo Component renders department with no courses or professors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui header"
      >
         
        Computer Science
         
      </div>
      <div
        class="ui two column grid"
      >
        <div
          class="column"
        >
          <div
            class="row"
          >
            <div
              class="ui header"
            >
              Courses
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <div
              class="ui header"
            >
              Professors
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui header"
    >
       
      Computer Science
       
    </div>
    <div
      class="ui two column grid"
    >
      <div
        class="column"
      >
        <div
          class="row"
        >
          <div
            class="ui header"
          >
            Courses
          </div>
        </div>
      </div>
      <div
        class="column"
      >
        <div
          class="row"
        >
          <div
            class="ui header"
          >
            Professors
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
